# lectures

./: README.md  index.html  package.json  pyproject.toml  vite.config.js
content/: manifest.json
content/checks/: lecture_01.json  lecture_02.json  lecture_03.json  lecture_04.json  lecture_05.json  lecture_06.json  lecture_07.json  lecture_08.json  lecture_09.json  lecture_10.json  lecture_11.json  lecture_12.json  lecture_13.json  lecture_14.json
content/flashcards/: index.json  lecture_01.json  lecture_02.json  lecture_03.json  lecture_04.json  lecture_05.json  lecture_06.json  lecture_07.json  lecture_08.json  lecture_09.json  lecture_10.json  lecture_11.json  lecture_12.json  lecture_13.json  lecture_14.json
content/interactives/: lecture_01.json  lecture_02.json  lecture_03.json  lecture_04.json  lecture_05.json  lecture_06.json  lecture_07.json  lecture_08.json  lecture_09.json  lecture_10.json  lecture_11.json  lecture_12.json  lecture_13.json  lecture_14.json
content/lectures/: lecture_01.md  lecture_02.md  lecture_03.md  lecture_04.md  lecture_05.md  lecture_06.md  lecture_07.md  lecture_08.md  lecture_09.md  lecture_10.md  lecture_11.md  lecture_12.md  lecture_13.md  lecture_14.md
content/quizzes/: lecture_01.json  lecture_02.json  lecture_03.json  lecture_04.json  lecture_05.json  lecture_06.json  lecture_07.json  lecture_08.json  lecture_09.json  lecture_10.json  lecture_11.json  (+3 more)
scripts/: generate-content.py  lecture_pipeline.py  validate_site.py
src/: flashcards.js  interactives.js  main.js  quickChecks.js  quiz.js  storage.js  styles.css
(+9 files in other folders)
