[project]
name = "lectures"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "edtrace>=0.1.12",
    "einops>=0.8.2",
    "markdown-it-py>=4.2.0",
    "mmh3>=5.2.1",
    "modal>=1.4.1",
    "pypdf>=6.11.0",
    "tiktoken>=0.12.0",
]
